# ego-novel

./: CHANGELOG.md  README.md  dev.sh  pyproject.toml  start.sh
backend/: .gitignore  __init__.py  app.py
backend/apps/auth/: auth.py
backend/apps/llm/: llm.py
backend/apps/stories/: stories.py
backend/apps/supabase/: supabase.py
backend/routers/: __init__.py  database.py  llm.py  stories.py  user.py
backend/types/: stories.py  user.py
backend/utils/: constants.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  i18n.tsx  index.tsx
frontend/src/@types/: i18next.d.ts
frontend/src/components/Header/: Header.tsx
frontend/src/contexts/: DarkModeContext.tsx
frontend/src/locales/: en.json
frontend/src/pages/: index.ts
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Register/: Register.tsx
frontend/src/pages/SignIn/: SignIn.tsx
frontend/src/pages/Stories/: Stories.tsx
frontend/src/redux/: store.ts
frontend/src/redux/slices/: storySlice.ts  userSlice.ts
frontend/src/utils/: constants.ts
