[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["anand-kamble <anandmk837@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
commitizen = "^4.0.0"
supabase = "^2.10.0"


[tool.poetry.scripts]
start = "backend:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
